2007-07-12	kaffeetisch

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Wrap
	gtk_icon_view_convert_widget_to_bin_window_coords.

	* t/GtkMenuToolButton.t
	* xs/GtkMenuToolButton.xs: Wrap
	gtk_menu_tool_button_set_arrow_tooltip_text and
	gtk_menu_tool_button_set_arrow_tooltip_markup.

	* t/GtkToolItem.t
	* xs/GtkToolItem.xs: Wrap gtk_tool_item_set_tooltip_text and
	gtk_tool_item_set_tooltip_markup.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_set_has_tooltip and
	gtk_widget_get_has_tooltip.

2007-07-10	kaffeetisch

	* t/GdkWindow.t
	* t/GtkIconTheme.t
	* t/GtkRecentManager.t: Fix test failures.

2007-07-08	kaffeetisch

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.153.

2007-07-08	kaffeetisch

	* xs/GtkBuilder.xs: Document the
	$builder->connect_signals ($user_data, $object) way of connecting
	signals.  (Reported by Grant McLean.)  Also correct a grammar
	mistake.

	* xs/GtkCellRenderer.xs: Mortalize all SVs we put on the stack.
	In the past, we had to be careful not to cause destruction of
	pre-existing C objects, but that's not necessary anymore.

	* xs/GtkEditable.xs (gtk2perl_editable_insert_text_marshal): Add a
	comment about why mortalizing isn't necessary here.

2007-07-07	kaffeetisch

	* t/GdkKeys.t
	* xs/GdkKeys.xs: Wrap gdk_keymap_have_bidi_layouts.

	* t/GtkTreeView.t
	* xs/GtkTreeView.xs: Wrap gtk_tree_view_is_rubber_banding_active.

	* xs/PangoCairo.xs
	* xs/PangoFontMap.xs: Don't set the
	no-warnings-for-unregistered-subclasses flag for PangoFontMap so
	that subclasses are registered and get their ancestry set up
	correctly (especially with respect to interfaces).  This enables
	us to stop jumping through hoops to handle
	pango_cairo_font_map_new and pango_cairo_font_map_get_default.

	* t/PangoCairo.t
	* xs/PangoCairo.xs: Wrap pango_cairo_font_map_new_for_font_type
	and pango_cairo_font_map_get_font_type.

	* t/PangoFont.t
	* xs/PangoFont.xs: Wrap pango_font_face_is_synthesized.

	* xs/GtkRadioAction.xs
	* xs/GtkRadioButton.xs